--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dental-web-app",
     "version": "1.0.0",
-    "description": "A web application using Node.js, Express, and MySQL",
+    "description": "A web application using Node.js, Express, and MySQL/PostgreSQL",
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
@@ -11,7 +11,6 @@
         "body-parser": "^1.20.2",
         "ejs": "^3.1.9",
         "express": "^4.18.2",
-        "mysql": "^2.18.1",
         "mysql2": "^3.14.0",
         "pg": "^8.11.3"
     },
